# news_aggregator

./: .env  .gitignore  README.md  app.py  app.py.py  pyproject.toml  requirements.txt  simple.py  toml_sync.py
docs/: note.md  requirements.txt
static/: script.js  style.css
static/css/: _style.css  style.css
static/js/: script.js
templates/: index.html  news.html
