[build-system]
requires = [
    "setuptools>=64.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "news-agregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "fastjsonschema==2.21.1",
    "flask==2.2.5",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "requests==2.31.0",
    "ruff==0.7.4",
    "toml==0.10.2",
    "tomli_w==1.1.0",
    "urllib3==2.3.0",
    "validate-pyproject==0.23",
    "werkzeug==3.1.3",
]

[tool.setuptools]
packages = []
